project/stage/testing/semantic/semantic_tests/reject/float_assign_bool.ul
void main() {
    float [1] arr;
    arr[0] = 0.0 < 0.2 == true == getBool();
}

boolean getBool() {
    return true;
}
